Début de l'ajout de layer etc