@@ -6,38 +6,35 @@ import net.minecraft.client.MinecraftClient;
 import net.minecraft.client.texture.NativeImage;
 import net.minecraft.client.texture.NativeImageBackedTexture;
 import net.minecraft.client.util.DefaultSkinHelper;
-import net.minecraft.client.util.SkinTextures;
-import net.minecraft.resource.Resource;
 import net.minecraft.util.Identifier;
-import org.lwjgl.PointerBuffer;
-import org.lwjgl.system.MemoryStack;
-import org.lwjgl.util.tinyfd.TinyFileDialogs;
 
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
-import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
 public class EditableSkin implements AutoCloseable {
-    private final NativeImage image;
+    private final NativeImage bufferImage; // L'image finale
     private final NativeImageBackedTexture texture;
     private final Identifier textureId;
 
-    // --- NOUVEAU : MÉMOIRE DES MODIFICATIONS ---
-    private boolean showBaseSkin = true; // La case à cocher
-    private final List<String> appliedPaths = new ArrayList<>(); // Liste des vêtements ajoutés
-    private int currentBodyColor = -1; // -1 = Pas de couleur, sinon code couleur int
+    // --- ARCHITECTURE CALQUES ---
+    // 1. Le skin de base (Joueur) est maintenant stocké à part
+    private NativeImage basePlayerPixels = null;
+    private boolean showBaseSkin = true;
+
+    // 2. La liste des vêtements (Objets Layer)
+    public final List<SkinLayer> layers = new ArrayList<>();
+
+    // 3. Couleur corps
+    private int currentBodyColor = -1;
 
     public EditableSkin() {
-        this.image = new NativeImage(NativeImage.Format.RGBA, 64, 64, false);
-        this.texture = new NativeImageBackedTexture(this.image);
+        this.bufferImage = new NativeImage(NativeImage.Format.RGBA, 64, 64, false);
+        this.texture = new NativeImageBackedTexture(this.bufferImage);
 
         String uniqueName = "temp_skin_" + System.currentTimeMillis();
         this.textureId = MinecraftClient.getInstance().getTextureManager()
@@ -45,46 +42,76 @@ public class EditableSkin implements AutoCloseable {
 
         this.texture.setFilter(false, false);
 
-        // Au démarrage, on construit l'image
+        // On charge le skin du joueur en mémoire une bonne fois pour toutes
+        loadBaseSkinInMemory();
         recompose();
     }
 
     public Identifier getTextureId() { return textureId; }
 
-    // --- 1. LE MOTEUR DE RECOMPOSITION ---
-    // Cette fonction redessine tout de zéro. C'est le secret pour la Checkbox.
+    // --- MOTEUR DE DESSIN OPTIMISÉ ---
     public void recompose() {
-        // A. On efface tout (Transparent)
-        fillPixels(0, 0, 64, 64, 0x00000000);
+        // 1. Reset (Transparent)
+        clearImage();
 
-        // B. Si la case est cochée, on dessine le joueur
-        if (showBaseSkin) {
-            loadCurrentPlayerSkin();
+        // 2. Base Skin (copie depuis la mémoire)
+        if (showBaseSkin && basePlayerPixels != null) {
+            copyPixels(basePlayerPixels, this.bufferImage);
         }
 
-        // C. Si une couleur de peau est définie, on l'applique
+        // 3. Couleur Peau
         if (currentBodyColor != -1) {
             doPaintSkin(currentBodyColor);
         }
 
-        // D. On ré-applique tous les vêtements de la liste
-        for (String path : appliedPaths) {
-            doMergeLayerFromDisk(path);
+        // 4. Vêtements (On empile les calques visibles)
+        for (SkinLayer layer : layers) {
+            if (layer.isVisible) {
+                mergePixels(layer.pixels, this.bufferImage);
+            }
         }
 
         upload();
     }
 
-    // --- 2. ACTIONS PUBLIQUES (Appelées par l'écran) ---
+    // --- GESTION DES CALQUES (Actions) ---
+
+    public void addLayer(String path, String displayName) {
+        // On charge l'image disque -> RAM
+        NativeImage img = loadFromDisk(path);
+        if (img != null) {
+            // On crée le calque et on l'ajoute
+            this.layers.add(new SkinLayer(displayName, img));
+            recompose();
+        }
+    }
+
+    public void removeLayer(int index) {
+        if (index >= 0 && index < layers.size()) {
+            SkinLayer l = layers.remove(index);
+            l.close(); // Important : libérer la mémoire
+            recompose();
+        }
+    }
+
+    public void toggleLayer(int index) {
+        if (index >= 0 && index < layers.size()) {
+            SkinLayer l = layers.get(index);
+            l.isVisible = !l.isVisible;
+            recompose();
+        }
+    }
+
+    public void moveLayerUp(int index) {
+        if (index < layers.size() - 1) {
+            SkinLayer l = layers.remove(index);
+            layers.add(index + 1, l);
+            recompose();
+        }
+    }
 
     public void setShowBaseSkin(boolean show) {
         this.showBaseSkin = show;
-        recompose(); // On redessine tout instantanément
-    }
-
-    // On remplace "mergeLayer" par "addLayer" car on ajoute à la liste
-    public void addLayer(String path) {
-        this.appliedPaths.add(path);
         recompose();
     }
 
@@ -93,84 +120,68 @@ public class EditableSkin implements AutoCloseable {
         recompose();
     }
 
-    // Pour le bouton Reset
     public void resetAll() {
-        this.appliedPaths.clear();
-        this.currentBodyColor = -1;
-        this.showBaseSkin = true;
+        for(SkinLayer l : layers) l.close();
+        layers.clear();
+        currentBodyColor = -1;
+        showBaseSkin = true;
         recompose();
     }
 
-//    // --- 3. SAUVEGARDE (EXPORT PNG) ---
-//    public void saveSkinToDisk() {
-//        try {
-//            Path runDir = MinecraftClient.getInstance().runDirectory.toPath();
-//            Path saveDir = runDir.resolve("saved_skins");
-//
-//            if (!Files.exists(saveDir)) Files.createDirectories(saveDir);
-//
-//            String filename = "skin_" + System.currentTimeMillis() + ".png";
-//            Path target = saveDir.resolve(filename);
-//
-//            this.image.writeTo(target);
-//            System.out.println("Skin sauvegardé ici : " + target.toAbsolutePath());
-//
-//            // Petit son ou feedback chat pourrait être ajouté ici
-//        } catch (IOException e) {
-//            e.printStackTrace();
-//        }
-//    }
+    // --- OUTILS INTERNES ---
 
-    // --- 4. MÉTHODES INTERNES (LOGIQUE DESSIN) ---
-
-    private void loadCurrentPlayerSkin() {
+    private void loadBaseSkinInMemory() {
         MinecraftClient client = MinecraftClient.getInstance();
         if (client.player == null) return;
 
-        String skinUrl = client.player.getSkinTextures().textureUrl();
-        if (skinUrl != null && !skinUrl.isEmpty()) {
-            try {
-                // CORRECTION ICI : new URL() est déprécié en Java 21, on utilise URI
-                InputStream stream = URI.create(skinUrl).toURL().openStream();
-                NativeImage skin = NativeImage.read(stream);
-                this.image.copyFrom(skin);
-                stream.close();
-                return;
-            } catch (Exception e) {
-                // Ignore erreur réseau
+        try {
+            String url = client.player.getSkinTextures().textureUrl();
+            InputStream stream;
+            if (url != null && !url.isEmpty()) {
+                stream = URI.create(url).toURL().openStream();
+            } else {
+                Identifier id = DefaultSkinHelper.getTexture();
+                stream = client.getResourceManager().getResource(id).get().getInputStream();
+            }
+
+            this.basePlayerPixels = NativeImage.read(stream);
+            stream.close();
+        } catch (Exception e) { e.printStackTrace(); }
+    }
+
+    private NativeImage loadFromDisk(String relativePath) {
+        try {
+            Path configDir = FabricLoader.getInstance().getConfigDir();
+            File file = configDir.resolve("skineditor/outfits/" + relativePath).toFile();
+            if (file.exists()) {
+                return NativeImage.read(new FileInputStream(file));
+            }
+        } catch (Exception e) { e.printStackTrace(); }
+        return null;
+    }
+
+    private void clearImage() {
+        for (int x = 0; x < 64; x++)
+            for (int y = 0; y < 64; y++)
+                this.bufferImage.setColor(x, y, 0x00000000);
+    }
+
+    private void copyPixels(NativeImage src, NativeImage dest) {
+        for (int x = 0; x < 64; x++) {
+            for (int y = 0; y < 64; y++) {
+                dest.setColor(x, y, src.getColor(x, y));
             }
         }
-        loadDefaultSkin();
     }
 
-    private void loadDefaultSkin() {
-        // Copie ici ta méthode loadDefaultSkin précédente
-        // ... (pour abréger, je mets le standard)
-        try {
-            Identifier id = DefaultSkinHelper.getTexture();
-            InputStream s = MinecraftClient.getInstance().getResourceManager().getResource(id).get().getInputStream();
-            this.image.copyFrom(NativeImage.read(s));
-        } catch (Exception e) {}
-    }
-
-
-    private void doMergeLayerFromDisk(String relativePath) {
-        Path configDir = FabricLoader.getInstance().getConfigDir();
-        File file = configDir.resolve("skineditor/outfits/" + relativePath).toFile();
-
-        if (file.exists()) {
-            try (FileInputStream stream = new FileInputStream(file)) {
-                NativeImage layer = NativeImage.read(stream);
-                // Fusion
-                for (int x = 0; x < layer.getWidth(); x++) {
-                    for (int y = 0; y < layer.getHeight(); y++) {
-                        int color = layer.getColor(x, y);
-                        if ((color >> 24 & 0xFF) > 0) { // Si pas transparent
-                            this.image.setColor(x, y, color);
-                        }
-                    }
+    private void mergePixels(NativeImage src, NativeImage dest) {
+        for (int x = 0; x < src.getWidth(); x++) {
+            for (int y = 0; y < src.getHeight(); y++) {
+                int color = src.getColor(x, y);
+                if ((color >> 24 & 0xFF) > 0) { // Si pas transparent
+                    dest.setColor(x, y, color);
                 }
-            } catch (IOException e) { e.printStackTrace(); }
+            }
         }
     }
 
@@ -190,7 +201,7 @@ public class EditableSkin implements AutoCloseable {
     private void fillPixels(int x, int y, int w, int h, int color) {
         for (int i = x; i < x + w; i++) {
             for (int j = y; j < y + h; j++) {
-                if (i >= 0 && i < 64 && j >= 0 && j < 64) this.image.setColor(i, j, color);
+                if (i >= 0 && i < 64 && j >= 0 && j < 64) this.bufferImage.setColor(i, j, color);
             }
         }
     }
